@@ -1,3 +1,8 @@
+*queuemetrics-19.10.1 (21 Oct 2019)
+
+  21 Oct 2019; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.1.ebuild:
+  app-metrics/queuemetrics: version bump to 19.10.1
+
 *queuemetrics-19.04.3-r2 (19 Jul 2019)
 
   19 Jul 2019; Agostino Sarubbo <ago@gentoo.org> +files/queuemetrics.service,
